<resources>
    <string name="app_name"> \t\t নীলফামারী জেলা </string>
    <string name="about_nil">জেলা পরিচিতি </string>
    <string name="visiting_place">দর্শনীয় স্থান্সমুহ </string>
    <string name="heritage">জেলার ঐতিহ্য </string>
    <string name="visiting">দর্শনীয় স্থানসমূহ </string>
    <string name="purakriti">পুরাকীর্তিসমুহ</string>
    <string name="persons">প্রখ্যাত ব্যক্তিত্ব </string>
    <string name="vougolik">ভোগোলিক অবস্থান </string>
    <string name="others">অন্যান্য </string>
    <string name="mrinal">Mrinal Kanti Ray \nBSc in ECE \nHSTU, Dinajpur \nMobile: 01744955241\nmail: mrinalkanti1995@gmail.com</string>
    <string name="hello_blank_fragment">
রাজধানী ঢাকা থেকে উত্তর পশ্চিম দিকে প্রায় ৪০০ কিঃমিঃ দুরে ১৮২১-বর্গ কিলোমিটার আয়তন বিশিষ্ট এ জেলার অবস্থান,যা কর্কটক্রান্তি রেখার সামান্য উত্তরে অবস্থিত।  এ জেলার পূর্বে রংপুর ও লালমনির হাট, দক্ষিণে রংপুর ও দিনাজপুর,পশ্চিমে দিনাজপুর ও পঞ্চগড় এবং উত্তরে ভারতের শিলিগুড়ি জেলা ।  কৃষি নির্ভর এ জেলার ৯০% সহজ  সরল  মানুষ কোন না কোন ভাবে কৃষির উপর নির্ভরশীল। নীলফামারীর দীগন্ত বিস্তৃত সমতল ভূমিতে প্রতি বছর  প্রচুর পরিমাণে  ধান, গম, আলু, তামাক  এবং আরও বিভিন্ন  প্রকার ফসল  উৎপন্ন হয়।  এ জেলায়  শিল্পী হরলাল রায়, রথীন্দ্র নাথ রায় ও সাংস্কৃতিক ব্যক্তিত্ব আসাদুজ্জামান নূর  -এর মত গুণীজনের জম্ম। এ জেলায় দেশের বৃহত্তম সেচ প্রকল্প তিস্তা সেচ প্রকল্প সেচ ও সম্পুরক সেচ সুবিধা দিয়ে কৃষি উৎপাদন বৃদ্ধিতে বিশেষ ভুমিকা রাখছে। জেলার উত্তর পূর্বদিক দিয়ে বহমান তিস্তা নদী জেলার দু’টি উপজেলার (ডিমলা-জলঢাকা) জন্য এখনও অভিশাপ হিসেবে বিদ্যমান। বৃহত্তর রংপুর দিনাজপুরের কেন্দ্রবিন্দুতে অবস্থিত এ জেলার সৈয়দপুর এর ক্ষুদ্র শিল্প গোটা দেশের অর্থনীতিতে বিশেষ ভূমিকা রাখছে। দেশের বৃহত্তম রেলওয়ে কারখানা সৈয়দপুরে অবস্থিত। উত্তরা ইপিজেড এলাকার কর্মসংস্থানে ও বৈদেশিক মুদ্রা অর্জনে অগ্রণী ভূমিকা পালন করছে।  নীলসাগর নামীয় বিশাল দিঘী এলাকার অন্যতম পর্যটন কেন্দ্র। সম্প্রতি চালুকৃত নীলসাগর আন্তঃনগর এক্মপ্রেস ট্রেন যোগাযোগের ক্ষেত্রে উল্লেখযোগ্য ভূমিকা রাখছে ।

\n
০১.	আয়তনঃ ১৬৪৩.৪০ বর্গ  কিলোমিটার \n
০২.	ভৌগলিক অবস্থানঃ	২৫০৪৪/ হতে ২৬০১৯/  উত্তর অক্ষাংশ এবং ৮৮০৪৬/ \n
০৩.	লোকসংখ্যাঃ ১৯,০৭,৪৯৭ জন।   (২০১১ সালের আদম শুমারী অনুযায়ী)\n
 পুরুষ       :    ৯,৫৯,৮৫৭  জন\n
 মহিলা     :   ৯,৪৭,৬৪০  জন\n
০৪.    	জনসংখ্যার ঘনত্বঃ  	প্রতি বর্গ কিলোমিটারে ১২১৫ জন\n
০৫.    	পেশা	কৃষক ৪৫.২৮%, কৃষি শ্রমিক ২৭.৮১%, দিনমজুর ০৩.৪২%, ব্যবসায়ী    ০৮.৬৫%,  চাকুরীজীবি ০৬.০৭%, অন্যান্য ০৮.৭৭% \n

০৬.    	ধর্মঃ	মুসলিম ৮২.৮৪%, হিন্দু ১৭.১৭%, খ্রীষ্টান ০.০৭%,
 বৌদ্ধ ০.০২%, অন্যান্য ০.১০% \n

০৭.    	জাতীয় সংসদে আসন সংখ্যাঃ 	০৪ টি \n
০৮.    	উপজেলাঃ	০৬ টি। (নীলফামারী সদর, সৈয়দপুর, ডোমার,
                ডিমলা,জলঢাকা, কিশোরগঞ্জ) \n

০৯.    	পৌরসভাঃ	০৪ টি। (নীলফামারী সদর, সৈয়দপুর, ডোমার, জলঢাকা) \n
১০.    	ইউনিয়নঃ	৬০ টি \n
১১.     	মৌজাঃ     	৩৭০ টি \n
১২.    	গ্রামঃ     	৩৭৮ টি \n
১৩.    	ভারতের সাথে সীমান্তের দৈর্ঘ্যঃ	৫০.৯০ কিলোমিটার \n
১৪.     	বি.ও.পি.’র সংখ্যাঃ    	১১ টি \n
১৫.    	মোট জমির পরিমাণঃ 	১,৫৮,৫৭৭.৭৭ হেক্টর \n
১৬.    	মোট আবাদি জমির পরিমাণঃ ১,২৬,১৩৩ হেক্টর \n
১৭.     	সেচকৃত জমির পরিমাণঃ  	১,১৪,০০০ হেক্টর \n
১৮.    	মোট বনভূমির পরিমানঃ	১৩৪৬.১৫ একর \n
১৯.    	মোট জলাভূমির পরিমানঃ  	 ১১০৯.০৩ একর \n
২০.    	শহরাঞ্চলের আয়তনঃ  	৯৬.৫৬১ বর্গ কিলোমিটার (নীলফামারী-২৪.৫০ বর্গ কি:মি:, জলঢাকা-২৮.২২ বর্গ কি:মি, ডোমার-৯.৪২১ বর্গ কি:মি:, সৈয়দপুর-৩৪.৪২ বর্গ কি:মি)
 \n ২১.    	খাদ্য উদ্বৃত্তঃ   	 ২,৮৫,৯০৬ মে. টন \n
২২.    	হাসপাতালের সংখ্যাঃ   	 ০৯ টি \n
২৩.    	ডায়াবেটিক ক্লিনিকঃ ০২ টি \n
২৪.    	মা ও শিশু কল্যাণ কেন্দ্রঃ   	 ০২ টি \n
২৫.    	পরিবার কল্যাণ কেন্দ্রঃ    	৫৫ টি \n
২৬.    	প্রাথমিক বিদ্যালয়ঃ 	৯৪০টি।(সরকারি৪৭২টি,বেসরকারি ৪৩৯টি,
কমিউনিটি ২৯টি) \n


২৭.    	মাধ্যমিক বিদ্যালয়ঃ  	২৯৫ টি। (সরকারি ০৫ টি, বেসরকারি ১৯২টি,
                  নিম্নমাধ্যমিক ৯৮ টি) \n

২৮.    	মহাবিদ্যালয়ঃ 	৪৫ টি। (সরকারি ০৪ টি, বেসরকারি ৪১টি ) \n
২৯.    	কারিগরি প্রশিক্ষণ কেন্দ্রঃ  	১৯ টি (সরকারি ২টি, বেসরকারি ১৭টি ) \n
৩০.    	পি.টি.আই.ঃ    	০১ টি \n
৩১.    	মাদ্রাসাঃ  	১৬৪ টি।(কামিল মাদ্রাসা-০১টি,
ফাজিল মাদ্রাসা১৪, আলিম মাদ্রাসা২৪টি
দাখিল মাদ্রাসা  ১১৫টি) \n

৩২.    	শিক্ষার হারঃ  	৪৯.৬৯% (২০১১ সালের আদম শুমারী অনুযায়ী) \n
৩৩.    	পাকা রাস্তাঃ    	 ৪৭০ কিলোমিটার \n
৩৪.    	কাঁচা রাস্তাঃ     	৩,৫৯২ কিলোমিটার \n
৩৫.    	রেলস্টেশনঃ ০৯ টি। \n
৩৬.   	রেলপথঃ 	 ৬৩ কিলোমিটার \n
৩৭.    	রেলওয়ে কারখানাঃ    	০১ টি \n
৩৮.    	বিমান বন্দরঃ   	০১ টি \n
৩৯.    	পাবলিক লাইব্রেরিঃ      	০৬ টি \n
৪০.    	ধর্মীয় উপাসনালয়ঃ    	মসজিদ২৫১৪ টি, মন্দির ৩৭১ টি, গীর্জা ০২ টি \n
৪১.     রেজিস্টার্ড এন.জি.ও.ঃ    	 ২৮ টি \n
৪২.    	এতিমখানাঃ          	০৮ টি \n
৪৩.    	ফায়ার সার্ভিসঃ     	 ০৩ টি \n
৪৪.     কোল্ড স্টোরেজঃ           	০৬টি \n
৪৫.    	খাদ্য গুদামঃ      	৩৪ টি(এল.এস.ডি.৭) \n
৪৬.    	হাট-বাজারঃ               	৯৮ টি \n
 ৪৭.    ডাকঘরঃ ১০৭  টি \n
৪৮.    	সেনানিবাসঃ	 ০১ টি \n
৪৯.    	জেলার দর্শনীয় স্থানঃ 	 নীলসাগর, হরিশচন্দ্রের পাঠ, ধর্মপালের গড়, কুন্দপুকুর মাজার,  ময়নামতির দূর্গ, ভীমের মায়ের চুলা ইত্যাদি \n



৫০.    	ইউনিয়ন ভূমি অফিসঃ      	৬০টি \n
৫১.    	পৌর ভূমি অফিসঃ  	০৩ টি \n
 ৫২.    প্রধান নদ-নদীঃ    	তিস্তা, বুড়িতিস্তা, বুড়িখোড়া,চাড়ালকাটা,
দেওনাই,বামনডাংগা \n
৫৩.    	তিস্তা প্রকল্পের খালের দৈর্ঘ্যঃ  	১০০৪ কিলোমিটার \n
৫৪.    	আশ্রয়ন প্রকল্পঃ 	 ০৭ টি \n
৫৫.    	আদর্শ গ্রামঃ  	৪২ টি \n
৫৬.	আশ্রয়ন প্রকল্পে পুনর্বাসিত পরিবারঃ 	১০৯০ টি \n
৫৭.    	রেড ক্রিসেন্টঃ   	০১ টি \n
৫৮.    	শিল্পকলা একাডেমীঃ  	০১ টি \n
৫৯.    	চেম্বার অব কমার্স এন্ড ইন্ডাস্ট্রিঃ 	০১ টি \n


</string>
    <string name="ek_nojore">সংক্ষিপ্ত\nবিবরণ</string>
    <string name="potvumi">পটভূমি</string>
    <string name="upzila">উপজেলা</string>
    <string name="union">ইউনিয়ন</string>
    <string name="mancitro">মানচিত্রে নীলফামারী</string>
    <string name="abc">এক নজরে নীলফামারী</string>
    <string name="potfrg">দুই শতাধিক বছর পূর্বে এ অঞ্চলে নীল চাষের খামার স্থাপন করে ইংরেজ নীলকরেরা। এ অঞ্চলের উর্বর ভূমি নীল চাষের অনুকূল হওয়ায় দেশের অন্যান্য এলাকার তুলনায় নীলফামারীতে বেশি সংখ্যায় নীলকুঠি ও নীল খামার গড়ে ওঠে। ঊণবিংশ শতাব্দীর শুরুতেই দুরাকুটি, ডিমলা, কিশোরগঞ্জ, টেঙ্গনমারী প্রভৃতি স্থানে নীলকুঠি স্থাপিত হয়। সে সময় বৃহত্তর রংপুর অঞ্চলের মধ্যে নীলফামারীতেই বেশি পরিমাণে শস্য উৎপাদিত হতো এখানকার উর্বর মাটির গুণে। সে কারণেই নীলকরদের ব্যাপক আগমন ঘটে এতদঅঞ্চলে। গড়ে ওঠে অসংখ্য নীল খামার। বর্তমান নীলফামারী শহরের তিন কিলোমিটার উত্তরে পুরাতন রেল স্টেশনের কাছেই ছিল একটি বড় নীলকুঠি। তাছাড়া বর্তমানে অফিসার্স ক্লাব হিসেবে ব্যবহৃত পুরাতন বাড়িটি ছিল একটি নীলকুঠি। ধারণা করা হয়, স্থানীয় কৃষকদের মুখে ‘নীল খামার’ রূপান্তরিত হয় ‘নীল খামারী’তে। আর এই নীলখামারীর অপভ্রংশ হিসেবে উদ্ভব হয় নীলফামারী নামের। নীলফামারী একটি প্রাচীন জনপদ। ঐতিহাসিক বিভিন্ন নিদর্শন ও প্রাচীন গ্রন্থাদি থেকে এ অঞ্চলে আদিম জনবসতির অস্তিত্বের কথা জানা যায়। খ্রিস্টপূর্ব নবম শতকে খননকৃত বিরাট রাজার দীঘি অপভ্রংশে বিন্নাদীঘি নীলফামারীর প্রাচীন ইতিহাসের কথা স্মরণ করিয়ে দেয়। এছাড়াও বিলুপ্তপ্রায় ধর্মপালের গড়, হরিশচন্দ্রের পাঠ, ভীমের মায়ের চুলা, ময়নামতির দূর্গ এ জেলার ঐতিহাসিক নিদর্শন। হিমালয়ের পাদদেশে অবস্থিত নীলফামারী জেলা হিমালয় পর্বত বাহিত পলল দিয়ে গঠিত। করতোয়া, আত্রাই ও তিস্তা নদের পলিমাটি এ অঞ্চলের মৃত্তিকা গঠন ও ভূমির উর্বরতা বৃদ্ধি করেছে।নীলফামারীর এ ভূ-পৃষ্ঠকে পাদদেশীয় পাললিক সমভূমি বলা হয়। বিভিন্ন প্রাকৃতিক বিবর্তনে নীলফামারীর নদীপথ বারংবার গতিপথ পরিবর্তন করে ক্রমশঃ উর্বর সমভূমি অঞ্চলে পরিণত হয়েছে। বহু ঘটনার প্রাণ কেন্দ্র নীলফামারী। বিভিন্ন প্রত্ন, প্রস্ত থেকে নীলফামারী জেলার মৃত্তিকাগর্ভে অদিম জনবসতির অস্তিস্ব অনুমান করা যায়। উর্বর ভূগর্ভের ফলে অত্র অঞ্চলে বিভিন্ন স্থানের লোকের আগমন ঘটে। কালের পরিক্রমায় যুদ্ধবিগ্রহের মধ্য দিয়ে তারা স্থায়ীভাবে এখানে বসবাস স্থাপন করে। কৃষক বিদ্রোহ, নীল বিদ্রোহ, তেভাগা আন্দোলন, ৫২ এর ভাষা আন্দোলন ও ৭১ এর মুক্তিযুদ্ধ নীলফামারীর ইতিহাসে অন্যতম অধ্যায়। প্রত্যেকটি বিদ্রোহ-সংগ্রামে নীলফামারীর লোকজন ছিল প্রতিবাদমুখর। প্রায় বিশ লক্ষ জনসংখ্যা অধ্যুষিত নীলফামারী জেলা একটি অবহেলিত, দারিদ্রপিড়ীত ও পিছিয়ে পড়া অঞ্চল হিসাবে পরিচিত। অসম ভূমি মালিকানা, ভূমিহীনদের সংখ্যাধিক্য, কৃষি নির্ভরতা, শিল্পায়নের অভাব এবং বেকারত্ব এ অঞ্চলের অর্থনৈতিক অনগ্রসরতার মূল কারণ। আর্থ-সামাজিক ও অবকাঠামোগত অনেক সমস্যা থাকা সত্বেও জমির উর্বরতা, তিস্তা ব্যারেজের মাধ্যমে নদীর পানি নিয়ন্ত্রন করে কৃষি কাজে ব্যবহার, জনশক্তির প্রাচুর্য প্রভৃতি কারণে এ অঞ্চল এখনও দেশের অন্যতম খাদ্য উদ্বৃত্ত অঞ্চল হিসাবে পরিগনিত। শিক্ষার গুণগতমান নিশ্চিত করে জনশক্তির সঠিক ব্যবহার ও শিল্পোন্নয়নের মাধ্যমে এ অঞ্চলকে একটি সম্ভাবনাময় অঞ্চল হিসাবে গড়ে তোলা সম্ভব।</string>
    <string name="intro_pot">জেলার পটভূমিঃ</string>
    <string name="up_details">নীলফামারী উপজেলার নাম সমূহ : \n ১। নীলফামারী সদর উপজেলা \n ২। সৈয়দপুর উপজেলা \n ৩। ডিমলা উপজেলা \n ৪। ডোমার উপজেলা \n ৫। জলঢাকা উপজেলা \n ৬। কিশোরগঞ্জ উপজেলা\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="union_details">ইউনিয়নের তালিকাঃ \n\n নীলফামারী সদর উপজেলার ইউনিয়ন  সমূহঃ\n ০১। ১ নং চওড়া বড়গাছা ইউনিয়ন \n ০২।২ নং গোড়গ্রাম ইউনিয়ন \n ০৩। ৩ নং খোকশাবাড়ী ইউনিয়ন \n ০৪। ৪ নং পলাশবাড়ী ইউনিয়ন \n ০৫। ৬ নং রামনগর ইউনিয়ন \n ০৬।৭ নং কচুকাটা ইউনিয়ন \n ০৭। ৮ নং পঞ্চপুকুর ইউনিয়ন \n ০৮। ৯ নং ইটাখোলা ইউনিয়ন \n ০৯। ১০ নং কুন্দপুকুর ইউনিয়ন \n ১০। ১১ নং সোনারায় ইউনিয়ন \n ১১। ১২ নং সংগলশী ইউনিয়ন \n ১২। ১৩ নং চড়াইখোলা ইউনিয়ন \n ১৩। ১৪ নং চাপড়া সরঞ্জানী ইউনিয়ন \n ১৪। ১৫ নং লক্ষীচাপ ইউনিয়ন \n ১৫। টুপামারী ইউনিয়ন  \n\n\n সৈয়দপুর উপজেলার ইউনিয়ন সমূহঃ \n\n ০১। কামারপুকুর ইউনিয়ন \n ০২। ২ নং কাশিরামবেলপুকুর ইউনিয়ন \n ০৩। ৩ নং বাঙ্গালীপুর ইউনিয়ন \n ০৪। ৪ নং বোতলাগাড়ী ইউনিয়ন \n ০৫। ৫ নং খাতামধুপুর ইউনিয়ন  \n\n\n  ডিমলা উপজেলা :- \n\n ০১।১নং পশ্চিশ ছাতনাই ইউনিয়ন পরিষদ। \n ০২। ২নং বালাপাড়া ইউনিয়ন পরিষদ । \n ০৩। ৩নং ডিমলা ইউনিয়ন পরিষদ। \n ০৪। ৪নং খগাখড়িবাড়ী ইউনিয়ন পরিষদ। \n ০৫।৫নং গয়াবাড়ী ইউনিয়ন পরিষদ। \n ০৬।৬নং নাউতারা ইউনিয়ন পরিষদ। \n ০৭। ৭নং খালিশা চাপানী ইউনিয়ন পরিষদ। \n ০৮। ৮নং ঝুনাগাছ ইউনিয়ন পরিষদ। \n ০৯। ৯নং টেপা খড়িবাড়ী ইউনিয়ন পরিষদ। \n ১০। ১০নং পূর্ব ছাতনাই ইউনিয়ন পরিষদ। \n\n\n ডোমার উপজেলার ইউনিয়নসমূহঃ  \n\n ০১।১ নং ভোগডাবুড়ি \n ০২।২ নং কেতকীবাড়ী \n ০৩।৩ নং গোমনাতি \n ০২।৪ নং জোড়াবাড়ী \n ০৫। ৫ নং বামুনীয়া \n ০৬।৬ নং পাংগা মটকপুর \n ০৭। ৭ নং বোড়াগাড়ী \n ০৮। ৮ নং ডোমার \n ০৯। ৯ নং সোনারায় \n ১০।১০ নং হরিণচড়া \n\n\n\n জলঢাকা উপজেলা :- \n\n ১।১ নং ডাউয়াবাড়ী ইউনিয়ন পরিষদ। \n ২ নং গোলমুন্ডা ইউনিয়ন পরিষদ। \n ৩ নং বালাগ্রাম ইউনিয়ন পরিষদ। \n ৪ নং গোলনা ইউনিয়ন পরিষদ। \n ৫ ধর্মপাল ইউনিয়ন পরিষদ। \n ৬ নং শিমুল বাড়ী ইউনিয়ন পরিষদ। \n ৭ নং মীরগঞ্জ ইউনিয়ন পরিষদ। \n ৮ নং কাঁঠালী ইউনিয়ন পরিষদ। \n ৯ নং খুটামারা ইউনিয়ন পরিষদ। \n ১০ নং শৌলমারী ইউনিয়ন পরিষদ । \n ১১ নং কৈমারী ইউনিয়ন পরিষদ।  \n\n\n\n কিশোরগঞ্জ উপজেলা :- \n\n\n ১ নং বড়ভিটা ইউনিয়ন পরিষদ। \n ২ নং পুটিমারী ইউনিয়ন পরিষদ। \n ৩ নং নিতাই ইউনিয়ন পরিষদ। \n ৪ নং বাহাগিলি ইউনিয়ন পরিষদ। \n ৫ নং চাঁদখানা ইউনিয়ন পরিষদ। \n ৬ নং কিশোরগঞ্জ ইউনিয়ন পরিষদ।  \n ৭ নং রনচন্ডি ইউনিয়ন পরিষদ । \n ৮ নং গাড়াগ্রাম ইউনিয়ন পরিষদ। \n ৯ নং মাগুরা ইউনিয়ন পরিষদ।</string>
    <string name="heritage_details"> \n সমূদ্র নয়, অথচ সমূদ্রের নামে নাম। নয়ন জুড়ানো বিপুল জলরাশির কারণে সবাই তাকে নীলসাগর বলে। আছে সাগর পাড়ের মত বৃক্ষরাজি, আছে নির্জনতা, আছে নানা বর্ণের পাখির কলকাকলী। পূর্বে এই বিরাট দীঘি ‘বিন্নাদীঘি’ নামে পরিচিত ছিল। জনশ্রুতি আছে যে, প্রায় ৫২০০ বছর পূর্বে এই দীঘিটি (যার আয়তন ৯৩.৯০একর) খনন করা হয়েছিল। মহাভারতে বর্ণিত বিরাট রাজা কুরুক্ষেত্রের যুদ্ধে নিহত হলে তাকে এই দীঘির পাড়ে সমাহিত করা হয়। বিরাট রাজার দীঘি কালক্রমে ‘বিরনা দীঘি’ এবং সি,এস জরিপকালে ‘বিন্নাদীঘি’ নামে পরিচিত হয়। ০৮/০৩/১৯৮০খ্রি: তারিখে তৎকালীন রংপুরের জেলা প্রশাসক জনাব মাহে আলম এবং নীলফামারীর মহকুমা প্রশাসক জনাব আব্দুল জববার স্থানীয় গণ্যমান্য ব্যক্তিবর্গের উপস্থিতিতে দীঘি সংস্কারের কাজ উদ্বোধনকালে এর নামকরণ করেন ‘‘নীলসাগর’’। এই স্থানটি নীলফামারী জেলা শহর থেকে ১৪.৫কিঃমিঃ উত্তর-পশ্চিমে নীলফামারী-দেবীগঞ্জ-পঞ্চগড় পাকা সড়কের পাশে অবস্থিত। বর্তমানে ভূমি মন্ত্রণালয়ের অর্থায়নে জেলা প্রশাসনের সরাসরি তত্ত্বাবধানে এখানে পাখির অভয়ারণ্য গড়ে তোলা হয়েছে। পর্যটকদের আবাসিক সুবিধাসহ বিভিন্ন ভৌত অবকাঠামো নির্মাণ করা হয়েছে। দর্শনীর বিনিময়ে স্থান ভ্রমণসহ ছিপ দ্বারা মৎস্য শিকারের ব্যবস্থা আছে। নীলসাগরের নামে বিভিন্ন প্রতিষ্ঠান, পত্রিকা, যানবাহন এবং সর্বোপরি নীলফামারী-ঢাকাগামী আন্তঃনগর ট্রেনের নামকরণ করা হয়েছে। নীলফামারী জেলা প্রশাসন নীলসাগর ভ্রমণের জন্য সকলকে সাদর আমন্ত্রণ জানাচ্ছে।</string>
    <string name="oitijjo">নীলফামারী জেলার ঐতিহ্যঃ</string>
</resources>