<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ep_back"
    android:gravity="center"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <DatePicker
        android:visibility="gone"
        android:id="@+id/date_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></DatePicker>
    <TextView
        android:layout_marginBottom="5dp"
        android:id="@+id/today_txt"
        android:layout_marginRight="1dp"
        android:layout_gravity="right"
        android:text="Today: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_about"
        android:text="@string/about_nil"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_heritage"
        android:text="@string/heritage"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/btn_visiting"
        android:text="@string/visiting"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_purakriti"
        android:text="@string/purakriti"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_persons"
        android:text="@string/persons"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_vougolik"
        android:text="@string/vougolik"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />

    <Button
        android:layout_marginBottom="70dp"
        android:id="@+id/btn_others"
        android:text="@string/others"
        android:background="#00f"
        android:textColor="#fff"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>